[package]
name = "axruntime"
version = "0.1.0"
edition = "2024"

[dependencies]
axhal = { path = "../axhal" }
axalloc = { path = "../axalloc" }
axlog = { path = "../axlog" }
axconfig = { path = "../axconfig" }
axdtb = { path = "../axdtb" }
axsync = { path = "../axsync" }
page_table = { path = "../page_table" }
axtask = { path = "../axtask" }
crate_interface = "0.1.0"
kernel_guard = { path = "../kernel_guard" }
